FILE(GLOB PreViewMeshQC_srcs ./*.h ./*.cpp)
if(TARGET PreViewMeshQC)
    message("PreViewMeshQC already exists")
else(TARGET PreViewMeshQC)
    ADD_LIBRARY (PreViewMeshQC STATIC ${PreViewMeshQC_srcs})
    target_include_directories(PreViewMeshQC PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:PreViewMeshQC/include>)
endif(TARGET PreViewMeshQC)
